--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
     "babel-jest": "^29.3.1",
+    "babel-plugin-import": "^1.13.5",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "vite": "^3.0.7",
